# PMEOW

./: .gitignore  .npmrc  .pnpm-buildDeps.json  Dockerfile  README.md  check_schema_final.py  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
agent/: .gitignore  README.md  pyproject.toml
agent/examples/: pmeow-agent.service
agent/examples/tasks/: pytorch_chatty.py  pytorch_hold.py  pytorch_hold_simple.py  pytorch_stagger.py
agent/pmeow/: __init__.py  __main__.py  cli_foreground.py  cli_python.py  cli_runtime.py  config.py  models.py  reporter.py  runtime_logging.py  task_reporting.py
agent/pmeow/_archived/: task_reporting.py  test_task_reporting.py  transport_client_old.py
agent/pmeow/collector/: __init__.py  cpu.py  disk.py  docker.py  gpu.py  gpu_attribution.py  internet.py  local_users.py  memory.py  network.py  processes.py  snapshot.py  system.py
agent/pmeow/daemon/: runtime_monitor.py  service.py  socket_server.py  supervisor.py  systemd.py
agent/pmeow/examples/: pytorch_tasks.py
agent/pmeow/executor/: __init__.py  attached.py  logs.py  runner.py
agent/pmeow/queue/: history.py  scheduler.py
agent/pmeow/state/: __init__.py  task_queue.py
agent/pmeow/store/: database.py  runtime.py  tasks.py
agent/pmeow/transport/: client.py
agent/tests/: conftest.py  test_cli_foreground.py  test_cli_python.py  test_cli_runtime.py  test_daemon_service.py  test_e2e_smoke.py  test_models.py  test_refactored_smoke.py  test_runtime_logging.py  test_smoke.py  test_state_task_queue.py  test_task_reporting.py
(+263 files in other folders)
