[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmeow-agent"
version = "0.2.0"
description = "PMEOW GPU cluster monitoring agent"
authors = [{name = "huan-yp"}]
license = { text = "AGPL-3.0-only" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
requires-python = ">=3.10"
dependencies = [
    "psutil",
    "python-socketio[client]>=5,<6",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
pmeow-agent = "pmeow.__main__:main"
pmeow = "pmeow.__main__:main"

[tool.setuptools.packages.find]
include = ["pmeow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
